--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="pingback" href="https://esglesiacastellar.com/xmlrpc.php" />
 
 	<script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
-<title>ESGLÉSIA EVANGÈLICA CASTELLAR &#8211; ESGLÉSIA EVANGÈLICA CASTELLAR</title>
+<title>IGLESIA BATISTA EMANUEL del PRAT &#8211; IGLESIA BATISTA EMANUEL del PRAT</title>
 <meta name='robots' content='max-image-preview:large' />
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" /><link rel='dns-prefetch' href='//cdn.jsdelivr.net' />
