--- a/direccion.html
+++ b/direccion.html
@@ -3,36 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dónde estamos - Iglesia Bautista Emanuel del Prat</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Dirección - IBEP</title>
 </head>
 <body>
-  <header>
-    <h1>Iglesia Bautista Emanuel del Prat</h1>
-    <nav>
-      <a href="index.html">Inicio</a>
-      <a href="quienes.html">Quiénes somos</a>
-      <a href="horarios.html">Horarios</a>
-      <a href="direccion.html">Dónde estamos</a>
-    </nav>
-  </header>
-
-  <main>
-    <section>
-      <h2>Dónde estamos</h2>
-      <p>
-        Dirección: Carrer de Girona, 153, Local 1, 08820 El Prat de Llobregat, Barcelona
-      </p>
-      <p>
-        <a href="https://www.google.com/maps?q=Carrer+de+Girona,+153,+Local+1,+08820+El+Prat+de+Llobregat,+Barcelona" target="_blank">
-          Ver en Google Maps
-        </a>
-      </p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Iglesia Bautista Emanuel del Prat</p>
-  </footer>
+  <h1>Dónde estamos</h1>
+  <p>Carrer de Girona, 153, Local 1, 08820 El Prat de Llobregat, Barcelona</p>
+  <p><a href="https://maps.google.com/?q=Carrer+de+Girona,+153,+El+Prat+de+Llobregat" target="_blank">Ver en Google Maps</a></p>
+  <p><a href="index.html">Volver al inicio</a></p>
 </body>
 </html>
