--- a/horarios.html
+++ b/horarios.html
@@ -3,33 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Horarios - Iglesia Bautista Emanuel del Prat</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Horarios - IBEP</title>
 </head>
 <body>
-  <header>
-    <h1>Iglesia Bautista Emanuel del Prat</h1>
-    <nav>
-      <a href="index.html">Inicio</a>
-      <a href="quienes.html">Quiénes somos</a>
-      <a href="horarios.html">Horarios</a>
-      <a href="direccion.html">Dónde estamos</a>
-    </nav>
-  </header>
-
-  <main>
-    <section>
-      <h2>Horarios</h2>
-      <ul>
-        <li><strong>Domingo:</strong> Culto de 11:00 a 13:00</li>
-        <li><strong>Miércoles:</strong> Jóvenes de 18:00 a 19:00</li>
-        <li><strong>Miércoles:</strong> Estudios bíblicos de 19:00 a 20:00</li>
-      </ul>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Iglesia Bautista Emanuel del Prat</p>
-  </footer>
+  <h1>Horarios</h1>
+  <ul>
+    <li><strong>Domingo:</strong> 11:00 – 13:00</li>
+    <li><strong>Miércoles Jóvenes:</strong> 18:00 – 19:00</li>
+    <li><strong>Estudios bíblicos:</strong> 19:00 – 20:00</li>
+  </ul>
+  <p><a href="index.html">Volver al inicio</a></p>
 </body>
 </html>
