--- a/quienes.html
+++ b/quienes.html
@@ -3,32 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiénes somos - Iglesia Bautista Emanuel del Prat</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Quiénes somos - IBEP</title>
 </head>
 <body>
-  <header>
-    <h1>Iglesia Bautista Emanuel del Prat</h1>
-    <nav>
-      <a href="index.html">Inicio</a>
-      <a href="quienes.html">Quiénes somos</a>
-      <a href="horarios.html">Horarios</a>
-      <a href="direccion.html">Dónde estamos</a>
-    </nav>
-  </header>
-
-  <main>
-    <section>
-      <h2>Quiénes somos</h2>
-      <p>
-        Somos un grupo de cristianos que nos reunimos para estudiar la Biblia,
-        compartir nuestra fe y vivir en comunidad bajo el señorío de Jesucristo.
-      </p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Iglesia Bautista Emanuel del Prat</p>
-  </footer>
+  <h1>Quiénes somos</h1>
+  <p>Somos la Iglesia Bautista Emanuel del Prat, una comunidad cristiana evangélica que busca vivir y compartir la fe en Jesucristo.</p>
+  <p>Nuestra misión es proclamar el Evangelio, discipular a los creyentes y servir a la comunidad en amor.</p>
+  <p><a href="index.html">Volver al inicio</a></p>
 </body>
 </html>
