--- a/direccion.html
+++ b/direccion.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dirección - IBEP</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dirección - Iglesia Bautista Emanuel del Prat</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Dónde estamos</h1>
-  <p>Carrer de Girona, 153, Local 1, 08820 El Prat de Llobregat, Barcelona</p>
-  <p><a href="https://maps.google.com/?q=Carrer+de+Girona,+153,+El+Prat+de+Llobregat" target="_blank">Ver en Google Maps</a></p>
-  <p><a href="index.html">Volver al inicio</a></p>
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="quienes.html">Quiénes Somos</a>
+        <a href="horarios.html">Horarios</a>
+        <a href="direccion.html">Dirección</a>
+        <a href="recursos.html">Recursos</a>
+    </nav>
+    
+<section>
+    <h2>Dirección</h2>
+    <p>Carrer de Girona, 153, Local 1, 08820 El Prat de Llobregat, Barcelona</p>
+    <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2995.4946261838793!2d2.094947!3d41.329032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a498f44f4a0c21%3A0x123456789abcdef!2sCarrer%20de%20Girona%2C%20153%2C%20El%20Prat%20de%20Llobregat!5e0!3m2!1ses!2ses!4v00000000000!5m2!1ses!2ses" 
+        width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy">
+    </iframe>
+</section>
+
+    <footer>
+        &copy; 2025 Iglesia Bautista Emanuel del Prat
+    </footer>
 </body>
 </html>
