--- a/quienes.html
+++ b/quienes.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiénes somos - IBEP</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiénes Somos - Iglesia Bautista Emanuel del Prat</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Quiénes somos</h1>
-  <p>Somos la Iglesia Bautista Emanuel del Prat, una comunidad cristiana evangélica que busca vivir y compartir la fe en Jesucristo.</p>
-  <p>Nuestra misión es proclamar el Evangelio, discipular a los creyentes y servir a la comunidad en amor.</p>
-  <p><a href="index.html">Volver al inicio</a></p>
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="quienes.html">Quiénes Somos</a>
+        <a href="horarios.html">Horarios</a>
+        <a href="direccion.html">Dirección</a>
+        <a href="recursos.html">Recursos</a>
+    </nav>
+    
+<section>
+    <h2>Quiénes Somos</h2>
+    <p>Somos la Iglesia Bautista Emanuel del Prat, una comunidad cristiana que se reúne para alabar a Dios, 
+    crecer en el conocimiento de Su Palabra y compartir la fe en Jesucristo con nuestra ciudad.</p>
+</section>
+
+    <footer>
+        &copy; 2025 Iglesia Bautista Emanuel del Prat
+    </footer>
 </body>
 </html>
