--- a/horarios.html
+++ b/horarios.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Horarios - IBEP</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Horarios - Iglesia Bautista Emanuel del Prat</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Horarios</h1>
-  <ul>
-    <li><strong>Domingo:</strong> 11:00 – 13:00</li>
-    <li><strong>Miércoles Jóvenes:</strong> 18:00 – 19:00</li>
-    <li><strong>Estudios bíblicos:</strong> 19:00 – 20:00</li>
-  </ul>
-  <p><a href="index.html">Volver al inicio</a></p>
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="quienes.html">Quiénes Somos</a>
+        <a href="horarios.html">Horarios</a>
+        <a href="direccion.html">Dirección</a>
+        <a href="recursos.html">Recursos</a>
+    </nav>
+    
+<section>
+    <h2>Horarios</h2>
+    <ul>
+        <li><strong>Domingo:</strong> Culto de 11:00 a 13:00</li>
+        <li><strong>Miércoles Jóvenes:</strong> 18:00 a 19:00</li>
+        <li><strong>Miércoles Estudios:</strong> 19:00 a 20:00</li>
+    </ul>
+</section>
+
+    <footer>
+        &copy; 2025 Iglesia Bautista Emanuel del Prat
+    </footer>
 </body>
 </html>
