--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
 <header>
     <h1>Iglesia Bautista Emanuel del Prat</h1>
-    <p>Bienvenidos, un lugar para adorar y crecer en la Palabra de Dios</p>
+    <p style="color:white; text-shadow:1px 1px 3px black;">Bienvenidos, un lugar para adorar y crecer en la Palabra de Dios</p>
 </header>
 <section>
     <h2>Bienvenida</h2>
