--- a/recursos.html
+++ b/recursos.html
@@ -4,10 +4,10 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Quiénes Somos - Iglesia Bautista Emanuel del Prat</title>
+<title>Recursos - Iglesia Bautista Emanuel del Prat</title>
 
 <link href="style.css" rel="stylesheet"/></head>
-<body><section class="page-hero"><h1>Quiénes Somos</h1></section><div class="main-content">
+<body><section class="page-hero"><h1>Recursos</h1></section><div class="main-content">
 <nav>
 <a href="index.html">Inicio</a>
 <a href="quienes.html">Quiénes Somos</a>
@@ -16,12 +16,12 @@
 <a href="recursos.html">Recursos</a>
 </nav>
 <section>
-<h2>Quiénes Somos</h2>
-<p>Somos la Iglesia Bautista Emanuel del Prat, una comunidad cristiana que se reúne para alabar a Dios, 
-    crecer en el conocimiento de Su Palabra y compartir la fe en Jesucristo con nuestra ciudad.</p>
+<h2>Recursos</h2>
+<p>Aquí encontrarás enlaces a nuestras predicaciones y estudios:</p>
+
 </section>
 <footer>
         © 2025 Iglesia Bautista Emanuel del Prat
     </footer>
-</div></body>
+<div class="recursos"><div class="recurso-card"><h3>Canal de YouTube</h3><p>Descarga o consulta en línea.</p></div><div class="recurso-card"><h3>Audios de predicaciones</h3><p>Descarga o consulta en línea.</p></div></div></div></body>
 </html>
