--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Inicio - Iglesia Bautista Emanuel del Prat</title>
 
 <link href="style.css" rel="stylesheet"/></head>
-<body><section class="hero"><h1 style="color:white;background:none;">Iglesia Bautista del Prat</h1></section><div class="main-content">
+<body><section class="hero"><h1 style="color:white;background:none;">Iglesia test1 Bautista del Prat</h1></section><div class="main-content">
 <nav>
 <a href="index.html">Inicio</a>
 <a href="quienes.html">Quiénes Somos</a>
