--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Inicio - Iglesia Bautista Emanuel del Prat</title>
 
-
+<link href="style.css" rel="stylesheet"/></head>
+<body><section class="hero"><h1 style="color:white;background:none;">Iglesia Bautista del Prat</h1></section><div class="main-content">
 <nav>
 <a href="index.html">Inicio</a>
 <a href="quienes.html">Quiénes Somos</a>
