--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-
 <html lang="es">
-
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Inicio - Iglesia Bautista Emanuel del Prat</title>
-
-<link href="style.css" rel="stylesheet"/></head>
-<body><section class="hero"><h1 style="color:white;background:none;">Iglesia test1 Bautista del Prat</h1></section><div class="main-content">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio - Iglesia Bautista Emanuel del Prat</title>
+    <link rel="stylesheet" href="style.css">
+<body>
 <nav>
 <a href="index.html">Inicio</a>
 <a href="quienes.html">Quiénes Somos</a>
