--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 </nav>
 <header>
 <h1>Iglesia Bautista Emanuel del Prat</h1>
-<p style="color:white; text-shadow:1px 1px 3px black;">Bienvenidos, un lugar para adorar y crecer en la Palabra de Dios. podras aprender estudiar cantar . oiasudfoiusd.slfjlkasflkjasdlfkjaslkfjaslkjf.
-kjasdfkjhsdfkjhaskjfh cantar</p>
+<p style="color:white; text-shadow:1px 1px 3px black;">Bienvenidos, un lugar para adorar y crecer en la Palabra de Dios. 
 </header>
 <section>
 <h2>Bienvenida</h2>
