--- a/recursos.html
+++ b/recursos.html
@@ -18,6 +18,7 @@
 <section>
 <h2>Recursos</h2>
 <p>Aquí encontrarás enlaces a nuestras predicaciones y estudios:</p>
+<div class="recursos"><div class="recurso-card"><h3>Canal de YouTube</h3><p>Descarga o consulta en línea.</p></div><div class="recurso-card"><h3>Audios de predicaciones</h3><p>Descarga o consulta en línea.</p></div></div></div></body>
 
 </section>
 <footer>
