--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </header>
 <section>
 <h2>Bienvenida</h2>
-<p>Somos un grupo de cristianos que nos reunimos para estudiar la Biblia y compartir la fe en Jesucristo. 
-    Te invitamos a conocernos y participar de nuestras reuniones.</p>
+<p>podras aprender a como Dios queire que te comportes en tu vida cotidiana. Somos un grupo de cristianos que nos reunimos para estudiar la Biblia y compartir la fe en Jesucristo. 
+    Te invitamos a conocernos y participar de nuestras reuniones. </p>
 </section>
 <footer>
         © 2025 Iglesia Bautista Emanuel del Prat
