--- a/horarios.html
+++ b/horarios.html
@@ -17,9 +17,11 @@
 </nav>
 <section>
 <h2>Horarios</h2>
+        
 <ul>
-<li><strong>Domingo:</strong> Culto de 11:00 a 13:00</li>
-<li><strong>Miércoles Jóvenes:</strong> 18:00 a 19:00</li><hr/>
+<li><strong>Domingo:</strong> Culto de 11:00 a 13:00</li><hr/>
+        
+<li><strong>Miércoles Jóvenes:</strong> 18:00 a 19:00</li>
 <li><strong>Miércoles Estudios:</strong> 19:00 a 20:00</li>
 </ul>
 </section>
