--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <section>
 <h2>Bienvenida</h2>
 <p>podras aprender a como Dios queire que te comportes en tu vida cotidiana. Somos un grupo de cristianos que nos reunimos para estudiar la Biblia y compartir la fe en Jesucristo. 
-    Te invitamos a conocernos y participar de nuestras reuniones. </p>
+    Te invitamos a conocernos y participar de nuestras reuniones. lkjljerererlkajsflkjaslkfjaslkfjaslkfjasdlk. 
+kjasfkjhsafkjhaskjfhskjsfh</p>
 </section>
 <footer>
         © 2025 Iglesia Bautista Emanuel del Prat
