--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <h2>Bienvenida</h2>
 <p>podras aprender a como Dios queire que te comportes en tu vida cotidiana. Somos un grupo de cristianos que nos reunimos para estudiar la Biblia y compartir la fe en Jesucristo. 
     Te invitamos a conocernos y participar de nuestras reuniones. lkjljerererlkajsflkjaslkfjaslkfjaslkfjasdlk. 
-kjasfkjhsafkjhaskjfhskjsfh</p>
+kjasfkjhsafkjhaskjfhskjsfh lkajflkajsflkajsflkasjdflkajsfl;kjasdlkfjasdlkfjsadlkfjlsakjflasdjfl;ksadjf. ksjfksajfkjsahfkjashf
+kajshfkjsahfkjahsfkjhasdkfjhasdkjfhasdkjfhasdkjhf</p>
 </section>
 <footer>
         © 2025 Iglesia Bautista Emanuel del Prat
