--- a/direccion.html
+++ b/direccion.html
@@ -7,7 +7,9 @@
 <title>Dirección - Iglesia Bautista Emanuel del Prat</title>
 
 <link href="style.css" rel="stylesheet"/></head>
-
+<section class="hero">
+  <img src="imagenes/foto-inicio.jpg" alt="coffe">
+</section>
 <nav>
 <a href="index.html">Inicio</a>
 <a href="quienes.html">Quiénes Somos</a>
