--- a/recursos.html
+++ b/recursos.html
@@ -7,7 +7,9 @@
 <title>Recursos - Iglesia Bautista Emanuel del Prat</title>
 
 <link href="style.css" rel="stylesheet"/></head>
-
+<section class="hero">
+  <img src="imagenes/coffe book.jpg" alt="Portada de la iglesia">
+</section>
 <nav>
 <a href="index.html">Inicio</a>
 <a href="quienes.html">Quiénes Somos</a>
