--- a/recursos.html
+++ b/recursos.html
@@ -8,7 +8,7 @@
 
 <link href="style.css" rel="stylesheet"/></head>
 <section class="hero">
-  <img src="imagenes/coffe book.jpg" alt="Portada de la iglesia">
+  <img src="imagenes/coffe bible.jpg" alt="Portada de la iglesia">
 </section>
 <nav>
 <a href="index.html">Inicio</a>
