--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 </header>
 <section>
 <h2>Bienvenida</h2>
-<p>podras aprender a como Dios queire que te comportes en tu vida cotidiana. Somos un grupo de cristianos que nos reunimos para estudiar la Biblia y compartir la fe en Jesucristo. 
+<p>podras aprender a como Dios queire que te comportes en tu vida cotidiana. Somos un grupo de cristianos que nos reunimos
+    para estudiar la Biblia y compartir la fe en Jesucristo. 
     Te invitamos a conocernos y participar de nuestras reuniones. lkjljerererlkajsflkjaslkfjaslkfjaslkfjasdlk. 
 kjasfkjhsafkjhaskjfhskjsfh lkajflkajsflkajsflkasjdflkajsfl;kjasdlkfjasdlkfjsadlkfjlsakjflasdjfl;ksadjf. ksjfksajfkjsahfkjashf
 kajshfkjsahfkjahsfkjhasdkfjhasdkjfhasdkjfhasdkjhf</p>
