--- a/index.html
+++ b/index.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - Iglesia Bautista Emanuel del Prat</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Inicio - Iglesia Bautista Emanuel del Prat</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
-<nav>
-<a href="index.html">Inicio</a>
-<a href="quienes.html">Quiénes Somos</a>
-<a href="horarios.html">Horarios</a>
-<a href="direccion.html">Dirección</a>
-<a href="recursos.html">Recursos</a>
-</nav>
-<header>
-<h1>Iglesia Bautista Emanuel del Prat</h1>
-<p style="color:white; text-shadow:1px 1px 3px black;">Bienvenidos, un lugar para adorar y crecer en la Palabra de Dios. 
-</header>
-<section>
-<h2>Bienvenida</h2>
-<p>podras aprender a como Dios queire que te comportes en tu vida cotidiana. Somos un grupo de cristianos que nos reunimos
-    para estudiar la Biblia y compartir la fe en Jesucristo. 
-    Te invitamos a conocernos y participar de nuestras reuniones. lkjljerererlkajsflkjaslkfjaslkfjaslkfjasdlk. 
-kjasfkjhsafkjhaskjfhskjsfh lkajflkajsflkajsflkasjdflkajsfl;kjasdlkfjasdlkfjsadlkfjlsakjflasdjfl;ksadjf. ksjfksajfkjsahfkjashf
-kajshfkjsahfkjahsfkjhasdkfjhasdkjfhasdkjfhasdkjhf</p>
-</section>
-<footer>
-        © 2025 Iglesia Bautista Emanuel del Prat
-    </footer>
-</div></body>
+
+  <!-- Navegación -->
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="quienes.html">Quiénes Somos</a>
+    <a href="horarios.html">Horarios</a>
+    <a href="direccion.html">Dirección</a>
+    <a href="recursos.html">Recursos</a>
+  </nav>
+
+  <!-- Encabezado principal -->
+  <header>
+    <h1>Iglesia Bautista Emanuel del Prat</h1>
+    <p class="slogan">Bienvenidos, un lugar para adorar y crecer en la Palabra de Dios.</p>
+  </header>
+
+  <!-- Sección de bienvenida -->
+  <section>
+    <h2>Bienvenida</h2>
+    <p>
+      Podrás aprender cómo Dios quiere que vivas en tu vida cotidiana. 
+      Somos un grupo de cristianos que nos reunimos para estudiar la Biblia 
+      y compartir la fe en Jesucristo.  
+    </p>
+    <p>
+      Te invitamos a conocernos y participar de nuestras reuniones. 
+    </p>
+  </section>
+
+  <!-- Pie de página -->
+  <footer>
+    © 2025 Iglesia Bautista Emanuel del Prat
+  </footer>
+
+</body>
 </html>
