--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio - Iglesia Bautista Emanuel del Prat</title>
+  <title>Iglesia Bautista Emanuel del Prat</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Navegación -->
+  <!-- Menú de navegación -->
   <nav>
     <a href="index.html">Inicio</a>
     <a href="quienes.html">Quiénes Somos</a>
@@ -17,22 +18,22 @@
     <a href="recursos.html">Recursos</a>
   </nav>
 
-  <!-- Encabezado principal -->
+  <!-- Encabezado con imagen de fondo -->
   <header>
     <h1>Iglesia Bautista Emanuel del Prat</h1>
-    <p class="slogan">Bienvenidos, un lugar para adorar y crecer en la Palabra de Dios.</p>
+    <p>Bienvenidos, un lugar para adorar y crecer en la Palabra de Dios.</p>
   </header>
 
   <!-- Sección de bienvenida -->
   <section>
     <h2>Bienvenida</h2>
     <p>
-      Podrás aprender cómo Dios quiere que vivas en tu vida cotidiana. 
-      Somos un grupo de cristianos que nos reunimos para estudiar la Biblia 
-      y compartir la fe en Jesucristo.  
+      Podrás aprender cómo Dios quiere que vivas en tu vida cotidiana.  
+      Somos un grupo de cristianos que nos reunimos para estudiar la Biblia  
+      y compartir la fe en Jesucristo.
     </p>
     <p>
-      Te invitamos a conocernos y participar de nuestras reuniones. 
+      Te invitamos a conocernos y participar de nuestras reuniones.  
     </p>
   </section>
 
