--- a/quienes.html
+++ b/quienes.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
-
 <html lang="es">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Quiénes Somos - Iglesia Bautista Emanuel del Prat</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Quiénes Somos - Iglesia Bautista Emanuel del Prat</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-<link href="style.css" rel="stylesheet"/></head>
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="quienes.html">Quiénes Somos</a>
+    <a href="horarios.html">Horarios</a>
+    <a href="direccion.html">Dirección</a>
+    <a href="recursos.html">Recursos</a>
+  </nav>
 
-<nav>
-<a href="index.html">Inicio</a>
-<a href="quienes.html">Quiénes Somos</a>
-<a href="horarios.html">Horarios</a>
-<a href="direccion.html">Dirección</a>
-<a href="recursos.html">Recursos</a>
-</nav>
-<section>
-<h2>Quiénes Somos</h2>
-    
-<p>Somos la Iglesia Bautista Emanuel del Prat, una comunidad cristiana que se reúne para alabar a Dios, 
-    crecer en el conocimiento de Su Palabra y compartir la fe en Jesucristo con nuestra ciudad.</p>
-</section>
-<footer>
-        © 2025 Iglesia Bautista Emanuel del Prat
-    </footer>
-</div></body>
+  <header class="page-hero" style="background-image: url('img/quienes.jpg');">
+    <h1>Quiénes Somos</h1>
+  </header>
+
+  <section>
+    <h2>Nuestra Historia</h2>
+    <p>Somos una comunidad cristiana dedicada a compartir la Palabra de Dios y a crecer juntos en la fe.</p>
+  </section>
+
+  <footer>
+    © 2025 Iglesia Bautista Emanuel del Prat
+  </footer>
+
+</body>
 </html>
