--- a/horarios.html
+++ b/horarios.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
-
 <html lang="es">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Horarios - Iglesia Bautista Emanuel del Prat</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Horarios - Iglesia Bautista Emanuel del Prat</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-<link href="style.css" rel="stylesheet"/></head>
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="quienes.html">Quiénes Somos</a>
+    <a href="horarios.html">Horarios</a>
+    <a href="direccion.html">Dirección</a>
+    <a href="recursos.html">Recursos</a>
+  </nav>
 
-<nav>
-<a href="index.html">Inicio</a>
-<a href="quienes.html">Quiénes Somos</a>
-<a href="horarios.html">Horarios</a>
-<a href="direccion.html">Dirección</a>
-<a href="recursos.html">Recursos</a>
-</nav>
-<section>
-<h2>Horarios</h2>
-        
-<ul>
-<li><strong>Domingo:</strong> Culto de 11:00 a 13:00</li><hr/>
-        
-<li><strong>Miércoles Jóvenes:</strong> 18:00 a 19:00</li>
-<li><strong>Miércoles Estudios:</strong> 19:00 a 20:00</li>
-</ul>
-</section>
-<footer>
-        © 2025 Iglesia Bautista Emanuel del Prat
-    </footer>
-</div></body>
+  <header class="page-hero" style="background-image: url('img/horarios.jpg');">
+    <h1>Horarios</h1>
+  </header>
+
+  <section class="horarios">
+    <h2>Nuestras Reuniones</h2>
+    <p><strong>Domingos:</strong> 10:00 AM – Culto principal</p>
+    <hr>
+    <p><strong>Miércoles:</strong> 7:00 PM – Estudio bíblico</p>
+    <hr>
+    <p><strong>Viernes:</strong> 8:00 PM – Reunión de jóvenes</p>
+  </section>
+
+  <footer>
+    © 2025 Iglesia Bautista Emanuel del Prat
+  </footer>
+
+</body>
 </html>
