--- a/direccion.html
+++ b/direccion.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
-
 <html lang="es">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Dirección - Iglesia Bautista Emanuel del Prat</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dirección - Iglesia Bautista Emanuel del Prat</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-<link href="style.css" rel="stylesheet"/></head>
-<section class="hero">
-  <img src="imagenes/foto-inicio.jpg" alt="coffe">
-</section>
-<nav>
-<a href="index.html">Inicio</a>
-<a href="quienes.html">Quiénes Somos</a>
-<a href="horarios.html">Horarios</a>
-<a href="direccion.html">Dirección</a>
-<a href="recursos.html">Recursos</a>
-</nav>
-<section>
-<h2>Dirección</h2>
-<p>Carrer de Girona, 153, Local 1, 08820 El Prat de Llobregat, Barcelona</p>
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="quienes.html">Quiénes Somos</a>
+    <a href="horarios.html">Horarios</a>
+    <a href="direccion.html">Dirección</a>
+    <a href="recursos.html">Recursos</a>
+  </nav>
 
-<div class="map-container"><div class="map-text"><h2>Visítanos en</h2><p>Dirección - Iglesia Bautista Emanuel del Prat</p></div><iframe allowfullscreen="" height="300" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2995.4946261838793!2d2.094947!3d41.329032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a498f44f4a0c21%3A0x123456789abcdef!2sCarrer%20de%20Girona%2C%20153%2C%20El%20Prat%20de%20Llobregat!5e0!3m2!1ses!2ses!4v00000000000!5m2!1ses!2ses" style="border:0;" width="100%">
-</iframe></div></section>
-<footer>
-        © 2025 Iglesia Bautista Emanuel del Prat
-    </footer>
-</div></body>
+  <header class="page-hero" style="background-image: url('img/direccion.jpg');">
+    <h1>Dónde Estamos</h1>
+  </header>
+
+  <section>
+    <div class="map-container">
+      <div class="map-text">
+        <h2>Iglesia Bautista Emanuel del Prat</h2>
+        <p>Calle Principal 123, El Prat de Llobregat, Barcelona</p>
+      </div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!..." allowfullscreen></iframe>
+    </div>
+  </section>
+
+  <footer>
+    © 2025 Iglesia Bautista Emanuel del Prat
+  </footer>
+
+</body>
 </html>
