--- a/recursos.html
+++ b/recursos.html
@@ -1,29 +1,44 @@
-<!DOCTYPE html>
 
+<!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Recursos - Iglesia Bautista Emanuel del Prat</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Recursos - Iglesia Bautista Emanuel del Prat</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-<link href="style.css" rel="stylesheet"/></head>
-<section class="hero"> 
-        <img src="imagenes/coffe bible.jpg" alt=""></section>
-<nav>
-<a href="index.html">Inicio</a>
-<a href="quienes.html">Quiénes Somos</a>
-<a href="horarios.html">Horarios</a>
-<a href="direccion.html">Dirección</a>
-<a href="recursos.html">Recursos</a>
-</nav>
-<section>
-<h2>Recursos</h2>
-<p>Aquí encontrarás enlaces a nuestras predicaciones y estudios:</p>
-<div class="recursos"><div class="recurso-card"><h3>Canal de YouTube</h3><p>Descarga o consulta en línea.</p></div><div class="recurso-card"><h3>Audios de predicaciones</h3><p>Descarga o consulta en línea.</p></div></div></div></body>
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="quienes.html">Quiénes Somos</a>
+    <a href="horarios.html">Horarios</a>
+    <a href="direccion.html">Dirección</a>
+    <a href="recursos.html">Recursos</a>
+  </nav>
 
-</section>
-<footer>
-        © 2025 Iglesia Bautista Emanuel del Prat
-    </footer>
-</div></body>
+  <header class="page-hero" style="background-image: url('img/recursos.jpg');">
+    <h1>Recursos</h1>
+  </header>
+
+  <section class="recursos">
+    <div class="recurso-card">
+      <h3>Predicaciones</h3>
+      <p>Accede a nuestras predicaciones en audio y video.</p>
+    </div>
+    <div class="recurso-card">
+      <h3>Estudios Bíblicos</h3>
+      <p>Material de estudio para tu crecimiento espiritual.</p>
+    </div>
+    <div class="recurso-card">
+      <h3>Cancionero</h3>
+      <p>Himnos y canciones cristianas para adorar juntos.</p>
+    </div>
+  </section>
+
+  <footer>
+    © 2025 Iglesia Bautista Emanuel del Prat
+  </footer>
+
+</body>
 </html>
