--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Iglesia Bautista Emanuel del Prat</title>
+  <title>Inicio - Iglesia Bautista Emanuel del Prat</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Menú de navegación -->
+  <!-- ====== NAV ====== -->
   <nav>
     <a href="index.html">Inicio</a>
     <a href="quienes.html">Quiénes Somos</a>
@@ -18,26 +17,29 @@
     <a href="recursos.html">Recursos</a>
   </nav>
 
-  <!-- Encabezado con imagen de fondo -->
+  <!-- ====== HERO ====== -->
   <header>
     <h1>Iglesia Bautista Emanuel del Prat</h1>
     <p>Bienvenidos, un lugar para adorar y crecer en la Palabra de Dios.</p>
   </header>
 
-  <!-- Sección de bienvenida -->
-  <section>
-    <h2>Bienvenida</h2>
-    <p>
-      Podrás aprender cómo Dios quiere que vivas en tu vida cotidiana.  
-      Somos un grupo de cristianos que nos reunimos para estudiar la Biblia  
-      y compartir la fe en Jesucristo.
-    </p>
-    <p>
-      Te invitamos a conocernos y participar de nuestras reuniones.  
-    </p>
-  </section>
+  <!-- ====== MAIN CONTENT ====== -->
+  <main class="main-content">
+    <section>
+      <h2>Bienvenida</h2>
+      <p>
+        Podrás aprender cómo Dios quiere que te comportes en tu vida cotidiana.
+        Somos un grupo de cristianos que nos reunimos para estudiar la Biblia
+        y compartir la fe en Jesucristo.
+      </p>
+      <p>
+        Te invitamos a conocernos y participar de nuestras reuniones.
+        ¡Eres bienvenido tal como eres!
+      </p>
+    </section>
+  </main>
 
-  <!-- Pie de página -->
+  <!-- ====== FOOTER ====== -->
   <footer>
     © 2025 Iglesia Bautista Emanuel del Prat
   </footer>
