--- a/quienes.html
+++ b/quienes.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+  <!-- ===== NAV ===== -->
   <nav>
     <a href="index.html">Inicio</a>
     <a href="quienes.html">Quiénes Somos</a>
@@ -16,15 +17,27 @@
     <a href="recursos.html">Recursos</a>
   </nav>
 
+  <!-- ===== HERO DE QUIÉNES SOMOS ===== -->
   <header class="page-hero" style="background-image: url('img/quienes.jpg');">
     <h1>Quiénes Somos</h1>
   </header>
 
-  <section>
-    <h2>Nuestra Historia</h2>
-    <p>Somos una comunidad cristiana dedicada a compartir la Palabra de Dios y a crecer juntos en la fe.</p>
-  </section>
+  <!-- ===== CONTENIDO ===== -->
+  <main class="main-content">
+    <section>
+      <h2>Nuestra Historia</h2>
+      <p>
+        Somos una comunidad cristiana que se reúne para estudiar la Biblia,
+        crecer en la fe y compartir el amor de Cristo.
+      </p>
+      <p>
+        Nuestra misión es llevar el evangelio a todos y servir a nuestra ciudad
+        con un corazón lleno de compasión.
+      </p>
+    </section>
+  </main>
 
+  <!-- ===== FOOTER ===== -->
   <footer>
     © 2025 Iglesia Bautista Emanuel del Prat
   </footer>
