--- a/recursos.html
+++ b/recursos.html
@@ -17,7 +17,7 @@
     <a href="recursos.html">Recursos</a>
   </nav>
 
-  <header class="page-hero" style="background-image: url('img/recursos.jpg');">
+  <header class="page-hero" style="coffe bible.jpj: url('img/recursos.jpg');">
     <h1>Recursos</h1>
   </header>
 
