--- a/quienes.html
+++ b/quienes.html
@@ -18,7 +18,7 @@
   </nav>
 
   <!-- ===== HERO DE QUIÉNES SOMOS ===== -->
-  <header class="page-hero" style="background-image: url('img/quienes.jpg');">
+  <header class="page-hero" style="praying bible.jpj: url('img/quienes.jpg');">
     <h1>Quiénes Somos</h1>
   </header>
 
