--- a/horarios.html
+++ b/horarios.html
@@ -16,7 +16,7 @@
     <a href="recursos.html">Recursos</a>
   </nav>
 
-  <header class="page-hero" style="background-image: url('img/horarios.jpg');">
+  <header class="page-hero" style="bible.jpg: url('img/horarios.jpg');">
     <h1>Horarios</h1>
   </header>
 
