--- a/direccion.html
+++ b/direccion.html
@@ -21,14 +21,41 @@
   </header>
 
   <section>
-    <div class="map-container">
-      <div class="map-text">
-        <h2>Iglesia Bautista Emanuel del Prat</h2>
-        <p>Calle Principal 123, El Prat de Llobregat, Barcelona</p>
-      </div>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!..." allowfullscreen></iframe>
-    </div>
-  </section>
+   .map-container {
+  display: flex;
+  flex-wrap: wrap;
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+  margin: 2rem auto;
+  max-width: 1100px;
+  align-items: center;
+  gap: 20px;
+}
+
+.map-text {
+  flex: 1 1 250px;
+}
+
+.map-text h2 {
+  margin: 0 0 8px 0;
+  font-size: 1.3rem;
+  color: #2c3e50;
+}
+
+.map-text p {
+  margin: 0;
+  color: #555;
+}
+
+.map-container iframe {
+  flex: 1 1 500px;
+  min-width: 300px;
+  height: 400px;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.06);
 
   <footer>
     © 2025 Iglesia Bautista Emanuel del Prat
