--- a/direccion.html
+++ b/direccion.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+  <!-- ===== NAV ===== -->
   <nav>
     <a href="index.html">Inicio</a>
     <a href="quienes.html">Quiénes Somos</a>
@@ -16,47 +17,32 @@
     <a href="recursos.html">Recursos</a>
   </nav>
 
+  <!-- ===== HERO DE DIRECCIÓN ===== -->
   <header class="page-hero" style="background-image: url('img/direccion.jpg');">
     <h1>Dónde Estamos</h1>
   </header>
 
-  <section>
-   .map-container {
-  display: flex;
-  flex-wrap: wrap;
-  background: white;
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 6px 18px rgba(0,0,0,0.08);
-  margin: 2rem auto;
-  max-width: 1100px;
-  align-items: center;
-  gap: 20px;
-}
+  <!-- ===== CONTENIDO ===== -->
+  <main class="main-content">
+    <section>
+      <div class="map-container">
+        <div class="map-text">
+          <h2>Iglesia Bautista Emanuel del Prat</h2>
+          <p>Calle Principal 123, El Prat de Llobregat, Barcelona</p>
+        </div>
 
-.map-text {
-  flex: 1 1 250px;
-}
+        <!-- 💡 Sustituye este iframe por el que copias de Google Maps -->
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!...tu-código-de-google-maps..."
+          allowfullscreen="" 
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
+    </section>
+  </main>
 
-.map-text h2 {
-  margin: 0 0 8px 0;
-  font-size: 1.3rem;
-  color: #2c3e50;
-}
-
-.map-text p {
-  margin: 0;
-  color: #555;
-}
-
-.map-container iframe {
-  flex: 1 1 500px;
-  min-width: 300px;
-  height: 400px;
-  border: none;
-  border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.06);
-
+  <!-- ===== FOOTER ===== -->
   <footer>
     © 2025 Iglesia Bautista Emanuel del Prat
   </footer>
