--- a/direccion.html
+++ b/direccion.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dirección - Iglesia Bautista Emanuel del Prat</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- ===== NAV ===== -->
   <nav>
     <a href="index.html">Inicio</a>
     <a href="quienes.html">Quiénes Somos</a>
@@ -17,24 +16,26 @@
     <a href="recursos.html">Recursos</a>
   </nav>
 
-  <!-- ===== HERO DE DIRECCIÓN ===== -->
   <header class="page-hero" style="background-image: url('img/direccion.jpg');">
     <h1>Dónde Estamos</h1>
   </header>
 
-  <!-- ===== CONTENIDO ===== -->
   <main class="main-content">
     <section>
       <div class="map-container">
         <div class="map-text">
           <h2>Iglesia Bautista Emanuel del Prat</h2>
-          <p>Calle Principal 123, El Prat de Llobregat, Barcelona</p>
+          <p>Avinguda del Remolar, 62-64, 08820 El Prat de Llobregat, Barcelona</p>
         </div>
 
-        <!-- 💡 Sustituye este iframe por el que copias de Google Maps -->
-        <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!...tu-código-de-google-maps..."
-          allowfullscreen="" 
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2994.5234110905997!2d2.079884915237841!3d41.3500917792738!2m3!1f0!2f0!3f0!3m2!
+          1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a466c6a8f3df%3A0x1e346f16ca5e3763!2sAvinguda%20del%20Remolar%2C%2062%2C%2008820%20El%20Prat%20de%20Llobregat%2C%
+          20Barcelona!5e0!3m2!1ses!2ses!4v1694448300000!5m2!1ses!2ses"
+          width="600"
+          height="450"
+          style="border:0;"
+          allowfullscreen=""
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade">
         </iframe>
@@ -42,7 +43,6 @@
     </section>
   </main>
 
-  <!-- ===== FOOTER ===== -->
   <footer>
     © 2025 Iglesia Bautista Emanuel del Prat
   </footer>
