--- a/direccion.html
+++ b/direccion.html
@@ -16,7 +16,7 @@
     <a href="recursos.html">Recursos</a>
   </nav>
 
-  <header class="page-hero" style="background-image: url('img/direccion.jpg');">
+  <header class="page-hero" style="bible: url('img/direccion.jpg');">
     <h1>Dónde Estamos</h1>
   </header>
 
