--- a/horarios.html
+++ b/horarios.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Horarios - Iglesia Bautista Emanuel del Prat</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
+  <!-- ===== NAV ===== -->
   <nav>
     <a href="index.html">Inicio</a>
     <a href="quienes.html">Quiénes Somos</a>
@@ -16,19 +17,26 @@
     <a href="recursos.html">Recursos</a>
   </nav>
 
-  <header class="page-hero" style="bible.jpg: url('img/horarios.jpg');">
+  <!-- ===== HERO ===== -->
+  <header class="page-hero" style="background-image: url('img/horarios.jpg');">
     <h1>Horarios</h1>
   </header>
 
-  <section class="horarios">
-    <h2>Nuestras Reuniones</h2>
-    <p><strong>Domingos:</strong> 10:00 AM – Culto principal</p>
-    <hr>
-    <p><strong>Miércoles:</strong> 7:00 PM – Estudio bíblico</p>
-    <hr>
-    <p><strong>Viernes:</strong> 8:00 PM – Reunión de jóvenes</p>
-  </section>
+  <!-- ===== CONTENIDO ===== -->
+  <main class="main-content horarios">
+    <section>
+      <h2>Nuestras Reuniones</h2>
+      <hr>
+      <p><strong>Domingo:</strong> Culto de Adoración – 11:00 AM</p>
+      <p><strong>Martes:</strong> Estudio Bíblico y Oración – 7:30 PM</p>
+      <p><strong>Viernes:</strong> Reunión de Jóvenes – 7:30 PM</p>
+      <hr>
+      <p>También realizamos actividades especiales en fechas señaladas.  
+      Consulta nuestras redes sociales o contáctanos para más información.</p>
+    </section>
+  </main>
 
+  <!-- ===== FOOTER ===== -->
   <footer>
     © 2025 Iglesia Bautista Emanuel del Prat
   </footer>
