--- a/recursos.html
+++ b/recursos.html
@@ -1,14 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Recursos - Iglesia Bautista Emanuel del Prat</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
+  <!-- ===== NAV ===== -->
   <nav>
     <a href="index.html">Inicio</a>
     <a href="quienes.html">Quiénes Somos</a>
@@ -17,25 +17,50 @@
     <a href="recursos.html">Recursos</a>
   </nav>
 
-  <header class="page-hero" style="coffe bible.jpj: url('img/recursos.jpg');">
+  <!-- ===== HERO ===== -->
+  <header class="page-hero" style="background-image: url('img/recursos.jpg');">
     <h1>Recursos</h1>
   </header>
 
-  <section class="recursos">
-    <div class="recurso-card">
-      <h3>Predicaciones</h3>
-      <p>Accede a nuestras predicaciones en audio y video.</p>
-    </div>
-    <div class="recurso-card">
-      <h3>Estudios Bíblicos</h3>
-      <p>Material de estudio para tu crecimiento espiritual.</p>
-    </div>
-    <div class="recurso-card">
-      <h3>Cancionero</h3>
-      <p>Himnos y canciones cristianas para adorar juntos.</p>
-    </div>
-  </section>
+  <!-- ===== CONTENIDO ===== -->
+  <main class="main-content">
+    <section>
+      <h2>Material para tu crecimiento espiritual</h2>
+      <div class="recursos">
+        
+        <!-- Tarjeta 1 -->
+        <div class="recurso-card">
+          <h3>Predicaciones en Video</h3>
+          <p>Accede a nuestras predicaciones grabadas en YouTube.</p>
+          <a href="https://www.youtube.com/@igleiaibep1981" target="_blank">Ver Canal</a>
+        </div>
 
+        <!-- Tarjeta 2 -->
+        <div class="recurso-card">
+          <h3>Estudios Bíblicos en PDF</h3>
+          <p>Descarga material de apoyo para profundizar en la Palabra.</p>
+          <a href="docs/estudio1.pdf" target="_blank">Descargar</a>
+        </div>
+
+        <!-- Tarjeta 3 -->
+        <div class="recurso-card">
+          <h3>Devocionales</h3>
+          <p>Lecturas diarias para fortalecer tu relación con Dios.</p>
+          <a href="docs/devocional.pdf" target="_blank">Abrir</a>
+        </div>
+
+        <!-- Tarjeta 4 -->
+        <div class="recurso-card">
+          <h3>Audio Sermones</h3>
+          <p>Escucha nuestras enseñanzas en formato de audio.</p>
+          <a href="audios/sermon1.mp3" target="_blank">Escuchar</a>
+        </div>
+
+      </div>
+    </section>
+  </main>
+
+  <!-- ===== FOOTER ===== -->
   <footer>
     © 2025 Iglesia Bautista Emanuel del Prat
   </footer>
