--- a/recursos.html
+++ b/recursos.html
@@ -32,7 +32,7 @@
         <div class="recurso-card">
           <h3>Predicaciones en Video</h3>
           <p>Accede a nuestras predicaciones grabadas en YouTube.</p>
-          <a href="https://www.youtube.com/@igleiaibep1981" target="_blank">Ver Canal</a>
+          <a href="https://www.youtube.com/@iglesiaibep1981" target="_blank">Ver Canal</a>
         </div>
 
         <!-- Tarjeta 2 -->
