--- a/horarios.html
+++ b/horarios.html
@@ -18,7 +18,7 @@
   </nav>
 
   <!-- ===== HERO ===== -->
-  <header class="page-hero" style="background-image: url('img/horarios.jpg');">
+  <header class="page-hero" style="praying bible.jpeg: url('img/horarios.jpg');">
     <h1>Horarios</h1>
   </header>
 
@@ -28,8 +28,8 @@
       <h2>Nuestras Reuniones</h2>
       <hr>
       <p><strong>Domingo:</strong> Culto de Adoración – 11:00 AM</p>
-      <p><strong>Martes:</strong> Estudio Bíblico y Oración – 7:30 PM</p>
-      <p><strong>Viernes:</strong> Reunión de Jóvenes – 7:30 PM</p>
+      <p><strong>Miercoles:</strong> Estudio Bíblico jovenes – 5:00 PM</>
+      <p><strong>         :</strong> Estudio Biblico – 7:00 PM</>
       <hr>
       <p>También realizamos actividades especiales en fechas señaladas.  
       Consulta nuestras redes sociales o contáctanos para más información.</p>
