--- a/horarios.html
+++ b/horarios.html
@@ -29,7 +29,7 @@
       <hr>
       <p><strong>Domingo:</strong> Culto de Adoración – 11:00 AM</p>
       <p><strong>Miercoles:</strong> Estudio Bíblico jovenes – 5:00 PM</>
-      <p><strong>         :</strong> Estudio Biblico – 7:00 PM</>
+      <p><strong>Miercoles:</strong> Estudio Biblico – 7:00 PM</>
       <hr>
       <p>También realizamos actividades especiales en fechas señaladas.  
       Consulta nuestras redes sociales o contáctanos para más información.</p>
