--- a/index.html
+++ b/index.html
@@ -8,38 +8,32 @@
 </head>
 <body>
 
-  <!-- ====== NAV ====== -->
+  <!-- ===== NAV ===== -->
   <nav>
-    <a href="index.html">Inicio</a>
-    <a href="quienes.html">Quiénes Somos</a>
-    <a href="horarios.html">Horarios</a>
-    <a href="direccion.html">Dirección</a>
-    <a href="recursos.html">Recursos</a>
+    <ul>
+      <li><a href="index.html" class="active">Inicio</a></li>
+      <li><a href="quienes.html">Quiénes Somos</a></li>
+      <li><a href="horarios.html">Horarios</a></li>
+      <li><a href="direccion.html">Dirección</a></li>
+      <li><a href="recursos.html">Recursos</a></li>
+    </ul>
   </nav>
 
-  <!-- ====== HERO ====== -->
-  <header>
+  <!-- ===== HERO INICIO ===== -->
+  <header class="page-hero inicio" style="background-image: url('img/hero-inicio.jpg');">
     <h1>Iglesia Bautista Emanuel del Prat</h1>
-    <p>Bienvenidos, un lugar para adorar y crecer en la Palabra de Dios.</p>
   </header>
 
-  <!-- ====== MAIN CONTENT ====== -->
+  <!-- ===== CONTENIDO ===== -->
   <main class="main-content">
     <section>
       <h2>Bienvenida</h2>
-      <p>
-        Podrás aprender cómo Dios quiere que te comportes en tu vida cotidiana.
-        Somos un grupo de cristianos que nos reunimos para estudiar la Biblia
-        y compartir la fe en Jesucristo.
-      </p>
-      <p>
-        Te invitamos a conocernos y participar de nuestras reuniones.
-        ¡Eres bienvenido tal como eres!
-      </p>
+      <p>Podrás aprender cómo Dios quiere que te comportes en tu vida cotidiana.</p>
+      <p>Somos un grupo de cristianos que nos reunimos para estudiar la Biblia y compartir la fe en Jesucristo.</p>
     </section>
   </main>
 
-  <!-- ====== FOOTER ====== -->
+  <!-- ===== FOOTER ===== -->
   <footer>
     © 2025 Iglesia Bautista Emanuel del Prat
   </footer>
