--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </nav>
 
   <!-- ===== HERO INICIO ===== -->
-  <header class="page-hero inicio" style="background-image: url('img/hero-inicio.jpg');">
+  <header class="page-hero inicio" style="bible manos.jpg: url('img/hero-inicio.jpg');">
     <h1>Iglesia Bautista Emanuel del Prat</h1>
   </header>
 
