--- a/recursos.html
+++ b/recursos.html
@@ -18,9 +18,9 @@
   </nav>
 
   <!-- ===== HERO ===== -->
-  <header class="page-hero" style="background-image: url('img/recursos.jpg');">
-    <h1>Recursos</h1>
-  </header>
+  <header class="page-hero otros" style="bible.jpeg: url('img/recursos.jpg');">
+  <h1>Recursos</h1>
+</header>
 
   <!-- ===== CONTENIDO ===== -->
   <main class="main-content">
