--- a/index.html
+++ b/index.html
@@ -20,16 +20,23 @@
   </nav>
 
   <!-- ===== HERO INICIO ===== -->
-  <header class="page-hero inicio" style="biblia_manos.jpg: url('img/hero-inicio.jpg');">
+  <header class="page-hero inicio" style="background-image: url('img/hero-inicio.jpg');">
     <h1>Iglesia Bautista Emanuel del Prat</h1>
   </header>
 
-  <!-- ===== CONTENIDO ===== -->
+  <!-- ===== CONTENIDO PRINCIPAL ===== -->
   <main class="main-content">
     <section>
       <h2>Bienvenida</h2>
-      <p>Podrás aprender cómo Dios quiere que te comportes en tu vida cotidiana.</p>
-      <p>Somos un grupo de cristianos que nos reunimos para estudiar la Biblia y compartir la fe en Jesucristo.</p>
+      <p>
+        Podrás aprender cómo Dios quiere que te comportes en tu vida cotidiana.
+        Somos un grupo de cristianos que nos reunimos para estudiar la Biblia
+        y compartir la fe en Jesucristo.
+      </p>
+      <p>
+        Te invitamos a conocernos y participar de nuestras reuniones.
+        ¡Eres bienvenido tal como eres!
+      </p>
     </section>
   </main>
 
