--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <ul>
       <li><a href="index.html" class="active">Inicio</a></li>
       <li><a href="quienes.html">Quiénes Somos</a></li>
-      <li><a href="horarios.html">Horarios</a></li>
+      <li><a href="horarios.html">Horarios</a></-li>
       <li><a href="direccion.html">Dirección</a></li>
       <li><a href="recursos.html">Recursos</a></li>
     </ul>
   </nav>
 
   <!-- ===== HERO INICIO ===== -->
-  <header class="page-hero inicio" style="background-image: url('img/hero-inicio.jpg');">
+  <header class="page-hero inicio" style="biblia_manos.jpg: url('img/hero-inicio.jpg');">
     <h1>Iglesia Bautista Emanuel del Prat</h1>
   </header>
 
