--- a/direccion.html
+++ b/direccion.html
@@ -18,7 +18,7 @@
   </nav>
 
   <!-- ===== HERO DE DIRECCIÓN ===== -->
-  <header class="page-hero" style="background-image: url('img/direccion.jpg');">
+  <header class="page-hero" style="direccion.jpeg: url('img/direccion.jpg');">
     <h1>Dónde Estamos</h1>
   </header>
 
