--- a/quienes.html
+++ b/quienes.html
@@ -1,46 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Quiénes Somos - Iglesia Bautista Emanuel del Prat</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- ===== NAV ===== -->
+  <!-- NAV -->
   <nav>
-    <a href="index.html">Inicio</a>
-    <a href="quienes.html">Quiénes Somos</a>
-    <a href="horarios.html">Horarios</a>
-    <a href="direccion.html">Dirección</a>
-    <a href="recursos.html">Recursos</a>
+    <ul>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="quienes.html" class="active">Quiénes Somos</a></li>
+      <li><a href="horarios.html">Horarios</a></li>
+      <li><a href="direccion.html">Dirección</a></li>
+      <li><a href="recursos.html">Recursos</a></li>
+    </ul>
   </nav>
 
-  <!-- ===== HERO DE QUIÉNES SOMOS ===== -->
-  <header class="page-hero" style="praying bible.jpj: url('img/quienes.jpg');">
+  <!-- HERO -->
+  <header class="page-hero otros" style="quienes: url('img/quienes.jpg');">
     <h1>Quiénes Somos</h1>
   </header>
 
-  <!-- ===== CONTENIDO ===== -->
+  <!-- CONTENIDO -->
   <main class="main-content">
     <section>
       <h2>Nuestra Historia</h2>
-      <p>
-        Somos una comunidad cristiana que se reúne para estudiar la Biblia,
-        crecer en la fe y compartir el amor de Cristo.
-      </p>
-      <p>
-        Nuestra misión es llevar el evangelio a todos y servir a nuestra ciudad
-        con un corazón lleno de compasión.
-      </p>
+      <p>Somos una comunidad cristiana que se reúne para estudiar la Biblia, crecer en la fe y compartir el amor de Cristo.</p>
+      <p>Nuestra misión es llevar el evangelio a todos y servir a nuestra ciudad con un corazón lleno de compasión.</p>
     </section>
   </main>
 
-  <!-- ===== FOOTER ===== -->
-  <footer>
-    © 2025 Iglesia Bautista Emanuel del Prat
-  </footer>
+  <!-- FOOTER -->
+  <footer>© 2025 Iglesia Bautista Emanuel del Prat</footer>
 
 </body>
 </html>
