--- a/horarios.html
+++ b/horarios.html
@@ -8,38 +8,37 @@
 </head>
 <body>
 
-  <!-- ===== NAV ===== -->
+  <!-- NAV -->
   <nav>
-    <a href="index.html">Inicio</a>
-    <a href="quienes.html">Quiénes Somos</a>
-    <a href="horarios.html">Horarios</a>
-    <a href="direccion.html">Dirección</a>
-    <a href="recursos.html">Recursos</a>
+    <ul>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="quienes.html">Quiénes Somos</a></li>
+      <li><a href="horarios.html" class="active">Horarios</a></li>
+      <li><a href="direccion.html">Dirección</a></li>
+      <li><a href="recursos.html">Recursos</a></li>
+    </ul>
   </nav>
 
-  <!-- ===== HERO ===== -->
-  <header class="page-hero" style="praying bible.jpeg: url('img/horarios.jpg');">
+  <!-- HERO -->
+  <header class="page-hero otros" style="background-image: url('img/horarios.jpg');">
     <h1>Horarios</h1>
   </header>
 
-  <!-- ===== CONTENIDO ===== -->
+  <!-- CONTENIDO -->
   <main class="main-content horarios">
     <section>
       <h2>Nuestras Reuniones</h2>
-      <hr>
-      <p><strong>Domingo:</strong> Culto de Adoración – 11:00 AM</p>
-      <p><strong>Miercoles:</strong> Estudio Bíblico jovenes – 5:00 PM</>
-      <p><strong>Miercoles:</strong> Estudio Biblico – 7:00 PM</>
-      <hr>
-      <p>También realizamos actividades especiales en fechas señaladas.  
-      Consulta nuestras redes sociales o contáctanos para más información.</p>
+      <ul>
+        <li><strong>Domingo:</strong> Culto de Adoración – 11:00 AM</li>
+        <li><strong>Miércoles:</strong> Estudio Bíblico jóvenes – 5:00 PM</li>
+        <li><strong>Miércoles:</strong> Estudio Bíblico – 7:00 PM</li>
+      </ul>
+      <p>También realizamos actividades especiales en fechas señaladas. Consulta nuestras redes sociales o contáctanos para más información.</p>
     </section>
   </main>
 
-  <!-- ===== FOOTER ===== -->
-  <footer>
-    © 2025 Iglesia Bautista Emanuel del Prat
-  </footer>
+  <!-- FOOTER -->
+  <footer>© 2025 Iglesia Bautista Emanuel del Prat</footer>
 
 </body>
 </html>
