--- a/direccion.html
+++ b/direccion.html
@@ -8,21 +8,23 @@
 </head>
 <body>
 
-  <!-- ===== NAV ===== -->
+  <!-- NAV -->
   <nav>
-    <a href="index.html">Inicio</a>
-    <a href="quienes.html">Quiénes Somos</a>
-    <a href="horarios.html">Horarios</a>
-    <a href="direccion.html">Dirección</a>
-    <a href="recursos.html">Recursos</a>
+    <ul>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="quienes.html">Quiénes Somos</a></li>
+      <li><a href="horarios.html">Horarios</a></li>
+      <li><a href="direccion.html" class="active">Dirección</a></li>
+      <li><a href="recursos.html">Recursos</a></li>
+    </ul>
   </nav>
 
-  <!-- ===== HERO DE DIRECCIÓN ===== -->
-  <header class="page-hero" style="direccion.jpeg: url('img/direccion.jpg');">
+  <!-- HERO -->
+  <header class="page-hero otros" style="direccion.jpeg: url('img/direccion.jpg');">
     <h1>Dónde Estamos</h1>
   </header>
 
-  <!-- ===== CONTENIDO ===== -->
+  <!-- CONTENIDO -->
   <main class="main-content">
     <section>
       <div class="map-container">
@@ -30,8 +32,6 @@
           <h2>Iglesia Bautista Emanuel del Prat</h2>
           <p>Avinguda del Remolar, 62-64, 08820 El Prat de Llobregat, Barcelona</p>
         </div>
-
-        <!-- 📌 Mapa de Google Maps con la dirección real -->
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2994.5234110905997!2d2.079884915237841!3d41.3500917792738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a466c6a8f3df%3A0x1e346f16ca5e3763!2sAvinguda%20del%20Remolar%2C%2062%2C%2008820%20El%20Prat%20de%20Llobregat%2C%20Barcelona!5e0!3m2!1ses!2ses!4v1694448300000!5m2!1ses!2ses"
           allowfullscreen=""
@@ -42,10 +42,8 @@
     </section>
   </main>
 
-  <!-- ===== FOOTER ===== -->
-  <footer>
-    © 2025 Iglesia Bautista Emanuel del Prat
-  </footer>
+  <!-- FOOTER -->
+  <footer>© 2025 Iglesia Bautista Emanuel del Prat</footer>
 
 </body>
 </html>
